--- a/TODO
+++ b/TODO
@@ -8,5 +8,6 @@ TODO
 - a escribir vieja!
 - License for the content
 - Create per-author pages/ids
+- Check seo positioning (google us and see how difficult is to find us)
 
 
